[FIX] web: Listview editable
Fix various problems with list view editable :
* Click outside which should discard/save the line in edition
* Warnings which should not appear when line is being discarded/saved
* Delete line icon was invisible in edition mode
* Tags which go under the row on chrome
* Checkboxes alignement
* Monetary symbol position
* JS test

+ JS code refactoring

--- a/web/static/src/less/form_view.less
+++ b/web/static/src/less/form_view.less
@@ -74,6 +74,8 @@
             }
             > .o_form_input {
                 border-style: none!important;
+                width: 100px;
+                .o-flex(1, 0, auto);
             }
         }
     }
